Fixed navigation bars visible and user interface issues.

--- a/hungerswipe/src/App.css
+++ b/hungerswipe/src/App.css
@@ -155,4 +155,6 @@
       bottom: 100%;
     }
   }
-  
+  #top{
+    scroll-behavior: smooth;
+  }
